oriterm_core/tests/vttest/snapshots/vttest__menu1__120x40_01_cursor_01.snap
---
source: oriterm_core/tests/vttest/menu1.rs
expression: text
---
************************************************************************************************************************
*++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++*
*+                                                                                                                    +*
*+                                                                                                                    +*
*+                                                                                                                    +*
*+                                                                                                                    +*
*+                                                                                                                    +*
*+                                                                                                                    +*
*+                            EEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEE                            +*
*+                            E                                                          E                            +*
*+                            E The screen should be cleared,  and have an unbroken bor- E                            +*
*+                            E der of *'s and +'s around the edge,   and exactly in the E                            +*
*+                            E middle  there should be a frame of E's around this  text E                            +*
*+                            E with  one (1) free position around it.    Push <RETURN>  E                            +*
*+                            E                                                          E                            +*
*+                            EEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEE                            +*
*+                                                                                                                    +*
*+                                                                                                                    +*
*+                                                                                                                    +*
*+                                                                                                                    +*
*+                                                                                                                    +*
*+                                                                                                                    +*
*+                                                                                                                    +*
*+                                                                                                                    +*
*+                                                                                                                    +*
*+                                                                                                                    +*
*+                                                                                                                    +*
*+                                                                                                                    +*
*+                                                                                                                    +*
*+                                                                                                                    +*
*+                                                                                                                    +*
*+                                                                                                                    +*
*+                                                                                                                    +*
*+                                                                                                                    +*
*+                                                                                                                    +*
*+                                                                                                                    +*
*+                                                                                                                    +*
*+                                                                                                                    +*
*++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++*
************************************************************************************************************************
