oriterm_core/tests/vttest/snapshots/vttest__menu1__120x40_01_cursor_04.snap
---
source: oriterm_core/tests/vttest/menu1.rs
expression: text
---
Test of autowrap, mixing control and print characters.                                                                              
The left/right margins should have letters in order:                                                                                
                                                                                                                                    
A                                                                                                                                  a
B                                                                                                                                   
b                                                                                                                                   
C                                                                                                                                  c
D                                                                                                                                  d
E                                                                                                                                  e
F                                                                                                                                   
f                                                                                                                                   
G                                                                                                                                  g
H                                                                                                                                  h
I                                                                                                                                  i
J                                                                                                                                   
j                                                                                                                                   
K                                                                                                                                  k
L                                                                                                                                  l
M                                                                                                                                  m
N                                                                                                                                   
n                                                                                                                                   
O                                                                                                                                  o
P                                                                                                                                  p
Q                                                                                                                                  q
R                                                                                                                                   
r                                                                                                                                   
S                                                                                                                                  s
T                                                                                                                                  t
U                                                                                                                                  u
V                                                                                                                                   
v                                                                                                                                   
W                                                                                                                                  w
X                                                                                                                                  x
Y                                                                                                                                  y
Z                                                                                                                                   
z                                                                                                                                   
                                                                                                                                    
Push <RETURN>
