oriterm_core/tests/vttest/snapshots/vttest__menu1__120x40_01_cursor_06.snap
---
source: oriterm_core/tests/vttest/menu1.rs
expression: text
---
Test of leading zeros in ESC sequences.                                                                                 
Two lines below you should see the sentence "This is a correct sentence".                                               
                                                                                                                        
This is a correct sentence                                                                                              
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
Push <RETURN>
