oriterm_core/tests/vttest/snapshots/vttest__menu1__80x24_00_main_menu.snap
---
source: oriterm_core/tests/vttest/menu1.rs
expression: s.grid_text()
---
                                                                                
                                                                                
         VT100 test program, version 2.7 (20230201)                             
         Line speed 38400bd                                                     
         Choose test type:                                                      
                                                                                
          0. Exit                                                               
          1. Test of cursor movements                                           
          2. Test of screen features                                            
          3. Test of character sets                                             
          4. Test of double-sized characters                                    
          5. Test of keyboard                                                   
          6. Test of terminal reports                                           
          7. Test of VT52 mode                                                  
          8. Test of VT102 features (Insert/Delete Char/Line)                   
          9. Test of known bugs                                                 
          10. Test of reset and self-test                                       
          11. Test non-VT100 (e.g., VT220, XTERM) terminals                     
          12. Modify test-parameters                                            
                                                                                
          Enter choice number (0 - 12):
