oriterm_core/tests/vttest/snapshots/vttest__menu1__80x24_01_cursor_03.snap
---
source: oriterm_core/tests/vttest/menu1.rs
expression: text
---
Test of autowrap, mixing control and print characters.                          
The left/right margins should have letters in order:                            
M                                                                              m
N                                                                               
n                                                                               
O                                                                              o
P                                                                              p
Q                                                                              q
R                                                                               
r                                                                               
S                                                                              s
T                                                                              t
U                                                                              u
V                                                                               
v                                                                               
W                                                                              w
X                                                                              x
Y                                                                              y
Z                                                                               
z                                                                               
                                                                                
Push <RETURN>
